fix card position on tablet

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -111,3 +111,10 @@
     }
     
 }
+
+@media (min-width: 800px) and (max-width: 1024px){
+    .cards {
+        left: 3rem;
+        top: 100%;
+    }
+}
